fix(news): width does not go over on mobile

--- a/src/styles/newsWithId.scss
+++ b/src/styles/newsWithId.scss
@@ -37,8 +37,10 @@ blockquote {
     display: flex;
     flex-direction: row;
     justify-content: center;
-
-    height: 300px;
+    
+    img {
+        width: 100%;
+    }
 }
 
 .news-stand {
